--- a/launch.html
+++ b/launch.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Quote Calculator</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <main class="container">
@@ -67,6 +67,6 @@
     </form>
   </main>
 
-  <script src="index.js" defer></script>
+  <script src="./index.js" defer></script>
 </body>
 </html>
